# MTK_model_zoo

./: .gitignore  CONTRIBUTING.md  PYTHON_OUTPUTS_QUICK_REFERENCE.md  PYTHON_OUTPUT_MIGRATION_SUMMARY.md  README.md  TUTORIAL.md  UPLOAD_GUIDE.md  prepare_for_upload.sh  setup_env.sh
.claude/: settings.local.json
.claude/doc/: mtk_mdla_operators.md  mtk_npu_knowledge_base.md
.claude/standards/: python_output_management.md
.claude/subagents/: README.md  USAGE_EXAMPLE.md  android-deployer.md  cpp-implementer.md  operator-analyst.md  project-initializer.md  python-converter.md
1_third_party/kaldi_native_fbank/Android/: Android.mk
helsinki/: .gitignore  PORTING_NOTES.md  README.md
helsinki/helsinki_mtk_cpp/: .gitignore  README.md  build.sh  deploy_and_test.sh
helsinki/helsinki_workspace/: .gitignore  README.md
sense-voice/: .gitignore  README.md
sense-voice/SenseVoice_workspace/: README.md
sense-voice/sensevoice_mtk_cpp/: .gitignore  README.md  build.sh  deploy_and_test.sh
superResolution/.claude/: settings.local.json
whisper/: .gitignore
whisper-kv-cache/: .gitignore
whisper/mtk/: README.md
whisper/mtk/cpp/: .gitignore  BUGFIX_ANALYSIS.md  CMakeLists.txt  LESSONS_LEARNED.md  README.md  build.sh  build_android.sh  deploy_and_test.sh  deploy_android.sh  generate_vocab.py  run_android_tests.sh
whisper/mtk/cpp/jni/: Android.mk
whisper/mtk/cpp/jni/src/: main.cpp  whisper_inference.cpp  whisper_inference.h
whisper/mtk/cpp/jni/src/mtk-npu/: neuron_executor.cpp
whisper/mtk/cpp/jni/src/utils/: audio_utils.cpp  audio_utils.h
(+156 files in other folders)
